# NeuralLaplaceControl

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  a.txt  b.txt  config.py  mppi_dataset_collector.py  mppi_optim.yaml  mppi_with_model.py  oracle.py  overlay.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_exp_multi.py  setup.cfg  train_utils.py  w_latent_ode.py  w_nl.py
baseline_models/: original_latent_ode.py
planners/: mppi_delay.py
process_results/: plot_util.py  process_logs.py
saved_models/: NL-diff-continous_CartPole-BT-SwingUp-v0_0.pt  NL-diff-continous_CartPole-BT-x2-dH-v0_0.pt  NL-diff-continous_oderl-acrobat_0.pt  NL-diff-continous_oderl-acrobat_fs-3_102.pt  NL-diff-continous_oderl-cartpole_delay-0_101_latent.pt  NL-diff-continous_oderl-cartpole_delay-0_90.pt  NL-diff-continous_oderl-cartpole_delay-0_999_updated.pt  NL-diff-continous_oderl-cartpole_delay-0_ts-grid-exp_999.pt  NL-diff-continous_oderl-cartpole_delay-1_90.pt  NL-diff-continous_oderl-cartpole_delay-2_0.pt  NL-diff-continous_oderl-cartpole_delay-2_101_updated.pt  NL-diff-continous_oderl-cartpole_delay-2_90.pt  NL-diff-continous_oderl-cartpole_delay-2_99.pt  NL-diff-continous_oderl-cartpole_delay-2_999_updated.pt  NL-diff-continous_oderl-cartpole_delay-2_99_combined.pt  NL-diff-continous_oderl-cartpole_delay-2_99_updated.pt  NL-diff-continous_oderl-cartpole_delay-3_90.pt  NL-diff-continous_oderl-cartpole_fs-3_0.pt  NL-diff-continous_oderl-cartpole_fs-3_101.pt  NL-diff-continous_oderl-cartpole_fs-3_102.pt  NL-diff-continous_oderl-cartpole_fs-3_99.pt  (+1171 more)
(+36 files in other folders)
