[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=46.1.0", "cython~=0.29"]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.black]
include = '\.pyi?$'
line-length = 120
target-version = ['py38', 'py39', 'py310']

[tool.isort]
known_first_party = "envs,planners,process_results,ctrl"
profile = "black"
src_paths = ["src"]

[tool.pylint]
disable = "R,C,fixme,unused-argument,protected-access,attribute-defined-outside-init"
generated-members = "torch.*"

# ignored-modules = "scipy.special"
